2006-12-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version (only translations have
	changed since the last rebuild - #216620).

2006-12-05  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

2006-12-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py (KickstartWriter.doRepo):  Fix traceback
	(#218274).

2006-12-01  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py (KickstartHandlers.deprecatedCommands):  Fix
	traceback (#218047, #218059).

2006-11-30  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

2006-11-21  Chris Lumens  <clumens@redhat.com>

	* po/pykickstart.pot:  Updated (#216620).

	* pykickstart/parser.py:  Update string formats to make translation
	easier.

2006-11-14  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartHandlers.doIscsi):  Use required
	attribute.

2006-11-09  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py (KickstartWriter.doLogging):  Add --level.

2006-10-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* Makefile:  Fix for new Release format.

2006-10-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py:  Add writer for key command.

2006-10-17  Jeremy Katz  <katzj@redhat.com>

	* pykickstart.spec, setup.py: Bump version.
	
	* pykickstart/parser.py, pykickstart/constants.py: add --skip for key

2006-10-16  Jeremy Katz  <katzj@redhat.com>

	* pykickstart.spec, setup.py: Bump version.

	* pykickstart/parser.py (KickstartHandlers.doKey): Support for
	installation key
	* pykickstart/data.py (KickstartData.__init__): Likewise.

2006-10-13  Bill Nottingham  <notting@redhat.com>

	* af.po, am.po, ar.po, be.po, bg.po, bn.po, cy.po, et.po,
	  eu_ES.po, fa.po, fi.po, he.po, hy.po, kn.po, ku.po, lo.po, lt.po,
	  lv.po, mk.po, my.po, nn.po, no.po, nso.po, ro.po, si.po, sq.po, th.po,