@@ -1,3 +1,12 @@
+2008-04-16  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart.spec, setup.py:  Bump version.
+
+	* Makefile:  Update for git.
+
+	* pykickstart/parser.py (KickstartHandlers.doNetwork): query is now a valid
+	bootproto for networking (#441837).
+
 2006-12-15  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec, setup.py:  Bump version (only translations have
